YH-000:code change host

--- a/src/Components/TabList/index.module.scss
+++ b/src/Components/TabList/index.module.scss
@@ -92,6 +92,7 @@
           .txt {
             color: #db7100;
             font-family: 'SF Pixelate';
+            font-style: italic;
             font-size: 24px;
           }
           .up {
