--- a/src/Components/Global/Dialog/components/buyToolsDialog/index.module.scss
+++ b/src/Components/Global/Dialog/components/buyToolsDialog/index.module.scss
@@ -41,10 +41,7 @@
     align-items: center;
     justify-content: center;
     color: #fffb00;
-
     text-align: right;
-    -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: #000;
     font-family: 'Kemco Pixel';
     font-size: 36px;
     font-style: normal;
@@ -52,6 +49,7 @@
     line-height: normal;
     letter-spacing: 6px;
     padding-bottom: 40px;
+    @include fontBorder();
     .up {
       background: $up;
       width: 26px;
