--- a/src/Components/Global/Dialog/components/youToBeDialog/index.module.scss
+++ b/src/Components/Global/Dialog/components/youToBeDialog/index.module.scss
@@ -82,14 +82,13 @@
           flex: 1;
           .hit_wrapper_hit {
             color: #fffb00;
-            -webkit-text-stroke-width: 3px;
-            -webkit-text-stroke-color: #000;
             font-family: 'Kemco Pixel';
             font-size: 28px;
             font-style: normal;
             font-weight: 700;
             line-height: normal;
             padding-top: 16px;
+            @include fontBorder();
           }
         }
         .hit_wrapper_icon {
@@ -161,14 +160,13 @@
     background: #fff;
     .success_txt {
       color: #fffb00;
-      -webkit-text-stroke-width: 3px;
-      -webkit-text-stroke-color: #000;
       font-family: 'Kemco Pixel';
       font-size: 32px;
       font-style: normal;
       font-weight: 700;
       line-height: normal;
       padding-right: 30px;
+      @include fontBorder();
     }
     .success_icon {
       background: $link;
