--- a/src/Components/TabList/index.module.scss
+++ b/src/Components/TabList/index.module.scss
@@ -4,14 +4,13 @@
   padding-top: 40px;
   .title {
     color: #fffb00;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: #000;
     font-family: 'Kemco Pixel';
     font-size: 28px;
     font-weight: 700;
     padding-bottom: 20px;
     text-align: left;
     padding-left: 30px;
+    @include fontBorder(2px);
   }
   .tab-list-wrapper {
     width: 690px;
