--- a/src/Pages/Invite/index.module.scss
+++ b/src/Pages/Invite/index.module.scss
@@ -22,12 +22,11 @@
         }
         .nums{
             color: #FFFB00;
-            -webkit-text-stroke-width: 3px;
-            -webkit-text-stroke-color: #000;
             font-family: "Kemco Pixel";
             font-size: 36px;
             font-weight: 700;
             padding: 30px 0 25px;
+            @include fontBorder();
         }
         .hit{
             color: #DB7100;
@@ -135,6 +134,14 @@
         .content{
             position: relative;
             z-index: 1;
+            color: #142443;
+            text-align: center;
+            font-family: "SF Pixelate";
+            font-size: 28px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            letter-spacing: -1px;
         }
     }
 }
