code fix bug and change style
code

YH-000:code add tg

code

--- a/src/Components/Global/Dialog/components/signInDialog/index.module.scss
+++ b/src/Components/Global/Dialog/components/signInDialog/index.module.scss
@@ -126,12 +126,11 @@ canvas{
     }
     .coin {
       text-align: center;
-      font-family: 'SF Pixelate';
+      font-family: 'Pixel';
       font-size: 28px;
       font-style: normal;
-      font-weight: 700;
+      font-weight: 400;
       line-height: normal;
-      letter-spacing: -2px;
     }
   }
 }
