--- a/src/Components/Toast/toast.module.scss
+++ b/src/Components/Toast/toast.module.scss
@@ -73,7 +73,7 @@
     flex: 1;
   }
   .close {
-    background: $close;
+    background: $close_top;
     width: 46px;
     height: 46px;
     position: absolute;
