--- a/src/Components/Global/Dialog/index.module.scss
+++ b/src/Components/Global/Dialog/index.module.scss
@@ -30,7 +30,7 @@
             top: 26px;
             width: 50px;
             height: 50px;
-            background: $close_yellow;
+            background: $close_bottom;
         }
     }
 }
