--- a/src/Pages/Boosters/index.module.scss
+++ b/src/Pages/Boosters/index.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
-  background: $boosterBg;
   width: 100vw;
-  height: 100vh;
+  flex: 1;
   padding-top: 80px;
+  padding-bottom: 20px;
   position: relative;
-  .ani{
+  .ani {
     width: 104.5px;
     height: 70px;
     background: $runing;
@@ -46,7 +46,7 @@
         font-size: 44px;
         font-weight: 700;
         padding-left: 20px;
-        @include fontBorder(4px);
+        @include fontBorder(8px);
       }
     }
   }
