--- a/src/Pages/Earn/index.module.scss
+++ b/src/Pages/Earn/index.module.scss
@@ -1,10 +1,9 @@
 .wrapper{
-    background: $boosterBg;
     width: 100vw;
-    height: 100vh;
+    flex: 1;
     padding-top: 40px;
-    padding-bottom: 180px;
     overflow: auto;
+    padding-bottom: 50px;
     .top_wrapper{
         background: $earnTop;
         width: 690px;
