--- a/src/Pages/Home/index.module.scss
+++ b/src/Pages/Home/index.module.scss
@@ -1,12 +1,12 @@
 .wrapper {
+  flex: 1;
   width: 100vw;
-  height: 100vh;
-  background: $homeBg;
+  // background: $homeBg;
   position: relative;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
-  .cloud_wrapper{
+  .cloud_wrapper {
     position: absolute;
     left: 58px;
     right: 98px;
@@ -18,7 +18,7 @@
       left: 0;
       top: 0;
       width: 178px;
-      height: 79px;
+      height: 69px;
       background: $cloud1;
     }
     .cloud2 {
@@ -28,31 +28,29 @@
       width: 128px;
       height: 60px;
       background: $cloud2;
-      
     }
-    &.cloud_wrapper1{
+    &.cloud_wrapper1 {
       transform: translateX(100vw);
       animation: scrolling 10s linear infinite;
       animation-delay: 5s;
     }
   }
 
-
   .main_wrapper {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: flex-end;
-    padding-bottom: 206px;
     flex: 1;
     position: relative;
-    .calendar{
+    padding-bottom: 40px;
+    .calendar {
       position: absolute;
       right: 28px;
-      width: 112px;
-      height: 102px;
+      width: 93px;
+      height: 85px;
       background: $calendar;
-      top: 220px;
+      bottom: 623px;
     }
     .level_wrapper {
       .coin {
@@ -60,56 +58,64 @@
         align-items: center;
         justify-content: center;
         vertical-align: middle;
-        color: #FFFB00;
-        font-family: "Kemco Pixel";
+        color: #fffb00;
+        font-family: 'Kemco Pixel';
         font-weight: 700;
-        @include fontBorder(4px);
-        &::before{
-            display: inline-block;
-            vertical-align: middle;
-            background: $coin;
-            width: 74px;
-            height: 74px;
-            content: '';
-            margin-right: 18px;
+        @include fontBorder(8px);
+        &::before {
+          display: inline-block;
+          vertical-align: middle;
+          background: $coin;
+          width: 74px;
+          height: 74px;
+          content: '';
+          margin-right: 18px;
         }
-       
       }
       .level {
-        color: #FFE100;
+        color: #ffe100;
         text-align: center;
-        font-family: "SF Pixelate Bold Italic";
+        font-family: 'SF Pixelate Bold Italic';
         font-style: italic;
         font-size: 36px;
         padding-top: 22px;
-        @include fontBorder();
+        @include fontBorder(6px);
       }
     }
-    .dog {
+    .dog_wrapper {
+      width: 100vw;
+      padding-top: 40px;
+      background-color: rgba($color: #000000, $alpha: 0);
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      transition: all 0.8s ease; /* 添加过渡效果 */
+      &.dog_ani4 {
+        padding-top: 190px;
+        .dog{
+          transform: scale(1.4);
+        }
+      }
+      &.dog_ani3 {
+        padding-top: 150px;
+        .dog{
+          transform: scale(1.2);
+        }
+      }
+      &.dog_ani2 {
+        padding-top: 100px;
+        .dog{
+          transform: scale(1.1);
+        }
+      }
+      .dog {
         background: $dog;
         width: 280px;
         height: 412px;
-        margin-top: 63px;
         transition: all 0.8s ease; /* 添加过渡效果 */
         transform: scale(1); /* 初始缩放比例 */
         transform-origin: center bottom;
-        &.dog_ani4{
-          transform: scale(1.4);
-          margin-top: 180px;
-        }
-        &.dog_ani3{
-          transform: scale(1.2);
-          margin-top: 130px;
-        }
-        &.dog_ani2{
-          transform: scale(1.1);
-        }
+      }
     }
-    .calendar {
-    }
-
-
   }
 }
-
-
