--- a/src/Pages/Invite/index.module.scss
+++ b/src/Pages/Invite/index.module.scss
@@ -1,7 +1,6 @@
 .wrapper{
-    background: $boosterBg;
     width: 100vw;
-    height: 100vh;
+    flex: 1;
     position: relative;
     .top_wrapper{
         display: flex;
@@ -26,7 +25,7 @@
             font-size: 36px;
             font-weight: 700;
             padding: 30px 0 25px;
-            @include fontBorder();
+            @include fontBorder(6px);
         }
         .hit{
             color: #DB7100;
@@ -90,6 +89,7 @@
             background: $pup;
             width: 112px;
             height: 86px;
+            margin-bottom: 20px;
         }
     }
 
