--- a/src/Theme/global.scss
+++ b/src/Theme/global.scss
@@ -50,12 +50,17 @@ body>iframe[style*="2147483647"]:not([id="webpack-dev-server-client-overlay"]) {
   src: url('~@/Theme/fonts/Kemco_Pixel.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Pixel';
+  src: url('~@/Theme/fonts/Pixel.ttf') format('truetype');
+}
+
 @keyframes scrolling {
   from {
-    transform: translateX(-100vw);
+    transform: translateX(100vw);
   }
   to {
-    transform: translateX(100vw);
+    transform: translateX(-100vw);
   }
 }
 
