--- a/src/Components/Global/Dialog/components/shareDialog/index.module.scss
+++ b/src/Components/Global/Dialog/components/shareDialog/index.module.scss
@@ -21,7 +21,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 48px;
-    padding: 0 48px 40px;
+    padding: 0 0 40px;
     background: linear-gradient(90deg, #d941f1 0%, #2863e4 100%);
     background-clip: text;
     -webkit-background-clip: text;
