--- a/src/Components/TabList/index.module.scss
+++ b/src/Components/TabList/index.module.scss
@@ -153,7 +153,7 @@
       background: rgba(255, 255, 255, 0.95);
       max-height: 604px;
       overflow: auto; 
-      padding: 0 30px;      
+      // padding: 0 30px;      
       .tab-wrapper {
         margin: 0 auto;
         background: rgba($color: #000000, $alpha:0);
