--- a/src/Components/ScrollNumber/index.module.scss
+++ b/src/Components/ScrollNumber/index.module.scss
@@ -14,6 +14,7 @@
     overflow-y: hidden;
     display: flex;
     align-items: center;
+    letter-spacing: -1px;
     &.number-animation-wrap-52{
         padding: 0 4px 0 0;
         letter-spacing: -4px;
