--- a/src/Components/CommonWrapper/index.module.scss
+++ b/src/Components/CommonWrapper/index.module.scss
@@ -1,7 +1,7 @@
 .commonwrapper{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     overflow: hidden;
     &.home{
