--- a/src/Pages/Boosters/index.module.scss
+++ b/src/Pages/Boosters/index.module.scss
@@ -4,6 +4,7 @@
   padding-top: 80px;
   padding-bottom: 20px;
   position: relative;
+  overflow: auto;
   .ani {
     width: 104.5px;
     height: 70px;
