--- a/src/Components/Footer/index.module.scss
+++ b/src/Components/Footer/index.module.scss
@@ -2,15 +2,17 @@
   display: flex;
   background: #fff;
   border-radius: 20px 20px 0 0;
-  flex: 0 0 166px;
+  flex: 0 0 140px;
+  height: 140px;
+  padding-bottom: 30px;
+  padding-top: 12px;
   .tab-item {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding-top: 12px;
-    padding-bottom: 30px;
+
     .tab-icon {
       width: 70px;
       height: 70px;
