--- a/src/Theme/global.scss
+++ b/src/Theme/global.scss
@@ -9,19 +9,19 @@
 }
 
 html {
-  --safe-area-inset-bottom: env(safe-area-inset-bottom, 0px); /* 支持iOS安全区 */
-  min-height: calc(100% + var(--safe-area-inset-bottom));
+  // --safe-area-inset-bottom: env(safe-area-inset-bottom, 0px); /* 支持iOS安全区 */
+  // min-height: calc(100% + var(--safe-area-inset-bottom));
   height: 100%;
 }
 body{
-    padding-top: constant(safe-area-inset-top);
-    padding-top: env(safe-area-inset-top);
-    padding-bottom: constant(safe-area-inset-bottom);
-    padding-bottom: env(safe-area-inset-bottom);
-    padding-left: constant(safe-area-inset-left);
-    padding-left: env(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
-    padding-right: env(safe-area-inset-right);
+    // padding-top: constant(safe-area-inset-top);
+    // padding-top: env(safe-area-inset-top);
+    // padding-bottom: constant(safe-area-inset-bottom);
+    // padding-bottom: env(safe-area-inset-bottom);
+    // padding-left: constant(safe-area-inset-left);
+    // padding-left: env(safe-area-inset-left);
+    // padding-right: constant(safe-area-inset-right);
+    // padding-right: env(safe-area-inset-right);
 }
 
 body,#root{
