--- a/src/Components/Global/Dialog/components/shareDialog/index.module.scss
+++ b/src/Components/Global/Dialog/components/shareDialog/index.module.scss
@@ -53,7 +53,7 @@
     font-weight: 700;
     line-height: 28.8px;
     letter-spacing: -2px;
-    padding: 18px 0 14px;
+    padding: 18px 60px 14px;
   }
 
   .coin_wrapper {
