--- a/src/Components/Button/index.module.scss
+++ b/src/Components/Button/index.module.scss
@@ -7,6 +7,6 @@
       animation: rotate 2s linear infinite;
     }
     &.disabled{
-        color: rgba(20, 36, 67, 0.5);
+        color: #fff;
     }
   }
