--- a/src/Pages/Invite/index.module.scss
+++ b/src/Pages/Invite/index.module.scss
@@ -53,6 +53,10 @@
             align-items: center;
             justify-content: center;
             padding-left: 11px;
+            font-family: "Pixel";
+            color: #DB7100;
+            font-size: 26px;
+            font-weight: 400;
             &::before{
                 content: "";
                 display: block;
@@ -61,9 +65,8 @@
                 height: 30px;
                 margin-right: 11px;
                 color: #DB7100;
-                font-family: "SF Pixelate";
-                font-size: 24px;
-                font-weight: 700;
+                font-family: "Pixel";
+                font-size: 26px;
             }
 
         }
