--- a/src/Theme/global.scss
+++ b/src/Theme/global.scss
@@ -11,7 +11,7 @@
 html {
   // --safe-area-inset-bottom: env(safe-area-inset-bottom, 0px); /* 支持iOS安全区 */
   // min-height: calc(100% + var(--safe-area-inset-bottom));
-  height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
 }
 body{
     // padding-top: constant(safe-area-inset-top);
