--- a/src/Theme/global.scss
+++ b/src/Theme/global.scss
@@ -11,7 +11,8 @@
 html {
   // --safe-area-inset-bottom: env(safe-area-inset-bottom, 0px); /* 支持iOS安全区 */
   // min-height: calc(100% + var(--safe-area-inset-bottom));
-  height: var(--tg-viewport-height, 100%);
+  height: 100%;
+  overflow: hidden;
 }
 body{
     // padding-top: constant(safe-area-inset-top);
@@ -26,6 +27,7 @@ body{
 
 body,#root{
   height: 100%;
+  overflow: hidden;
 }
 ::-webkit-scrollbar {
   width: 10px;
