--- a/src/Components/Global/Dialog/components/signInDialog/index.module.scss
+++ b/src/Components/Global/Dialog/components/signInDialog/index.module.scss
@@ -3,7 +3,11 @@
     background: linear-gradient(143deg, #f4f3f4 0%, #eff0f4 100%);
     color: #142443;
   }
-  50%{
+  40% {
+    background: linear-gradient(143deg, #f3dbf9 0%, #c3d1f1 100%);
+    color: #3a4150;
+  }
+  50% {
     background: linear-gradient(143deg, #ebb3f8 0%, #88a8f1 100%);
     color: #8d9dbd;
   }
@@ -12,7 +16,22 @@
     color: #fff;
   }
 }
-canvas{
+@keyframes checkmark {
+  0% {
+    width: 100%;
+    background: linear-gradient(157deg, #e3a8ec 0%, #a5bcec 100%);
+  }
+  50% {
+    width: 80%;
+    background: linear-gradient(157deg, #e68ef4 0%, #89a9ed 100%);
+  }
+  100% {
+    width: 0;
+    background: linear-gradient(157deg, #cb21e6 0%, #0d4dd7 100%);
+  }
+}
+
+canvas {
   position: absolute;
   left: 0;
   right: 0;
@@ -97,9 +116,7 @@ canvas{
           height: 38px;
           border-radius: 0px 16px 0px 10px;
           background: linear-gradient(157deg, #cb21e6 0%, #0d4dd7 100%);
-          &::before {
-            content: '';
-            display: block;
+          .icon {
             background: $tick;
             width: 18px;
             height: 14px;
@@ -108,6 +125,22 @@ canvas{
       }
       &.ani {
         animation: ani 2s linear forwards;
+        .label {
+         overflow: hidden;
+          &::before {
+            position: absolute;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100%;
+            border-radius: 0px 16px 0px 10px;
+            animation: checkmark 0.8s ease-out forwards;
+            background: #ebb3f8;
+          }
+        }
       }
     }
     .item_text {
