--- a/src/Theme/image.scss
+++ b/src/Theme/image.scss
@@ -56,6 +56,7 @@ $sleep: url('~@/Theme/assets/sleep.png') no-repeat center/100% 100%;
 $warn: url('~@/Theme/assets/warn.png') no-repeat center/100% 100%;
 $close_bottom:url('~@/Theme/assets/close_bottom.png') no-repeat center/100% 100%;
 $close_top:url('~@/Theme/assets/close_top.png') no-repeat center/100% 100%;
+$heartAni:url('~@/Theme/assets/heartAni.png') no-repeat center/100% 100%;
 
 
 
