--- a/src/Pages/Home/components/miningComp/index.module.scss
+++ b/src/Pages/Home/components/miningComp/index.module.scss
@@ -59,6 +59,12 @@
       .progress_coin {
         margin-left: 16px;
       }
+      .loading{
+        width: 35px;
+        height: 35px;
+        background: $loading;
+        animation: rotate 2s linear infinite;
+      }
     }
     .progress_coin {
       width: 42px;
