--- a/src/Pages/Home/index.module.scss
+++ b/src/Pages/Home/index.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
+  overflow-y: hidden;
   .cloud_wrapper {
     position: absolute;
     left: 58px;
