--- a/src/Components/TabList/index.module.scss
+++ b/src/Components/TabList/index.module.scss
@@ -124,6 +124,11 @@
           flex:0 0 48px;
           height: 54px;;
         }
+        &.tab-r-finish{
+          background: $finish;
+          flex: 0 0 38px;
+          height: 30px;
+        }
       }
     }
 
