--- a/src/Theme/image.scss
+++ b/src/Theme/image.scss
@@ -57,6 +57,7 @@ $warn: url('~@/Theme/assets/warn.png') no-repeat center/100% 100%;
 $close_bottom:url('~@/Theme/assets/close_bottom.png') no-repeat center/100% 100%;
 $close_top:url('~@/Theme/assets/close_top.png') no-repeat center/100% 100%;
 $heartAni:url('~@/Theme/assets/heartAni.png') no-repeat center/100% 100%;
+$finish:url('~@/Theme/assets/finish.png') no-repeat center/100% 100%;
 
 
 
