--- a/src/Components/Global/Dialog/components/loading/index.module.scss
+++ b/src/Components/Global/Dialog/components/loading/index.module.scss
@@ -15,6 +15,7 @@
     height: 140px;
     border: 5px solid #fff;
     background: $runing;
+    margin-top: -160px;
   }
   .txt{
     color: #DB7100;
