--- a/src/Pages/Home/index.module.scss
+++ b/src/Pages/Home/index.module.scss
@@ -99,7 +99,7 @@
           animation: none;
           .dog_heart{
             position: absolute;
-            left: 40px;
+            left: 30%;
             transform: translateX(-50%);
             top: -40px;
             width: 750px;
