--- a/src/Pages/Invite/index.module.scss
+++ b/src/Pages/Invite/index.module.scss
@@ -32,10 +32,9 @@
             font-family: "SF Pixelate";
             font-size: 24px;
             letter-spacing: -2px;
-            font-weight: 700;
             span{
                 font-family: 'Pixel';
-                font-weight: 400;
+                letter-spacing: -2px;
             }
         }
     }
