--- a/src/Components/CommonWrapper/index.module.scss
+++ b/src/Components/CommonWrapper/index.module.scss
@@ -2,10 +2,14 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100vw;
+    width: 750px;
+    margin: 0 auto;
     overflow: hidden;
     &.home{
         background: $homeBg;
+        background-position: bottom center;
+        background-size: 100%;
+        background-color: #1384ff;
     }
     &.invite, &.boosters,&.earn{
         background: $boosterBg;
