--- a/src/Components/Global/Dialog/index.module.scss
+++ b/src/Components/Global/Dialog/index.module.scss
@@ -6,7 +6,7 @@
     top: 0;
     z-index: 98;
     .common-dialog-wrapper{
-        width: 100vw;
+        width: 750px;
         position: fixed;
         bottom: 0;
         left: 0;
