--- a/src/Pages/Home/components/miningComp/index.module.scss
+++ b/src/Pages/Home/components/miningComp/index.module.scss
@@ -2,7 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 93px auto 0;
+  // margin: 93px auto 0;
+  position: fixed;
+  bottom: 196px;
+  z-index: 0;
 }
 .progress_start {
   animation: colorCycle 2s infinite;
