--- a/src/Pages/Home/index.module.scss
+++ b/src/Pages/Home/index.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   flex: 1;
-  width: 100vw;
+  width: 750px;
   // background: $homeBg;
   position: relative;
   display: flex;
@@ -44,14 +44,14 @@
     justify-content: flex-end;
     flex: 1;
     position: relative;
-    padding-bottom: 40px;
+    padding-bottom: 230px;
     .calendar {
-      position: absolute;
+      position: fixed;
       right: 28px;
       width: 93px;
       height: 85px;
       background: $calendar;
-      bottom: 623px;
+      bottom: 750px;
     }
     .level_wrapper {
       .coin {
@@ -84,7 +84,7 @@
       }
     }
     .dog_wrapper {
-      width: 100vw;
+      width: 750px;
       padding-top: 40px;
       background-color: rgba($color: #000000, $alpha: 0);
       display: flex;
@@ -111,7 +111,7 @@
       &.dog_ani3 {
         padding-top: 150px;
         .dog{
-          transform: scale(1.2);
+          transform:scale(1.2);
           animation: none;
         }
       }
@@ -129,7 +129,7 @@
         background-position: center;
         width: 415px;
         height: 454px;
-        transform: scale(1); /* 初始缩放比例 */
+        transform:translateY(0) scale(1); /* 初始缩放比例 */
         transform-origin: center bottom;
         transition: all 0.8s ease; /* 添加过渡效果 */
         animation: scaleAni 1s infinite;
@@ -137,16 +137,4 @@
       }
     }
   }
-}
-
-.a{
-  color: #FFF;
-
-  -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: #FF4D00;
-  font-family: "Kemco Pixel";
-  font-size: 42px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
 }
