--- a/src/Components/ScrollNumber/index.module.scss
+++ b/src/Components/ScrollNumber/index.module.scss
@@ -11,7 +11,7 @@
 }
 .number-animation-wrap {
     position: relative;
-    overflow-y: hidden;
+    overflow: hidden;
     display: flex;
     align-items: center;
     letter-spacing: -1px;
