--- a/src/Pages/Invite/index.module.scss
+++ b/src/Pages/Invite/index.module.scss
@@ -11,6 +11,7 @@
         width: 691px;
         height: 272px;
         margin: 0 auto;
+        padding-top: 25px;
         .title{
             color: #142443;
             text-align: center;
@@ -20,12 +21,7 @@
             letter-spacing: -2px;
         }
         .nums{
-            color: #FFFB00;
-            font-family: "Kemco Pixel";
-            font-size: 36px;
-            font-weight: 700;
-            padding: 30px 0 25px;
-            @include fontBorder(6px);
+            padding: 25px 0 20px;
         }
         .hit{
             color: #DB7100;
