--- a/src/Components/Global/Dialog/components/youToBeDialog/index.module.scss
+++ b/src/Components/Global/Dialog/components/youToBeDialog/index.module.scss
@@ -81,14 +81,8 @@
         .hit_wrapper_l {
           flex: 1;
           .hit_wrapper_hit {
-            color: #fffb00;
-            font-family: 'Kemco Pixel';
-            font-size: 28px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: normal;
             padding-top: 16px;
-            @include fontBorder();
+            // @include fontBorder();
           }
         }
         .hit_wrapper_icon {
@@ -157,7 +151,7 @@
 
 
   .coin_wrapper {
-    padding: 48px 0 43px;
+    margin: 48px 0 43px;
     @include coin_wrapper();
   }
 
@@ -172,14 +166,7 @@
 
     background: #fff;
     .success_txt {
-      color: #fffb00;
-      font-family: 'Kemco Pixel';
-      font-size: 32px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: normal;
       padding-right: 30px;
-      @include fontBorder();
     }
     .success_icon {
       background: $link;
