--- a/src/Pages/Boosters/index.module.scss
+++ b/src/Pages/Boosters/index.module.scss
@@ -40,14 +40,14 @@
         background: $coin;
         width: 50px;
         height: 50px;
+        margin-top: -5px;
       }
       .num {
-        color: #fffb00;
-        font-family: 'Kemco Pixel';
-        font-size: 44px;
-        font-weight: 700;
         padding-left: 20px;
-        @include fontBorder(8px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        // @include fontBorder(8px);
       }
     }
   }
