--- a/src/Theme/global.scss
+++ b/src/Theme/global.scss
@@ -176,7 +176,7 @@ body>iframe[style*="2147483647"]:not([id="webpack-dev-server-client-overlay"]) {
 }
 
 @mixin fontBorder($width: 3px, $color: #000) {
-  paint-order: stroke;
+  // paint-order:stroke;
   -webkit-text-stroke-width: $width;
   -webkit-text-stroke-color: $color;
 }
@@ -184,18 +184,20 @@ body>iframe[style*="2147483647"]:not([id="webpack-dev-server-client-overlay"]) {
 
 @mixin coin_wrapper($width: 40px, $height: 40px,$font-size: 36px) {
   font-size: $font-size;
-  color: #FFFB00;
-  font-family: "Kemco Pixel";
-  font-weight: 700;
-  @include fontBorder(3px);
+  position: relative;
+  padding-left: 60px;
+  padding-top: 13px;
   &::before{
     content: '';
     display: inline-block;
     width: $width;
     height: $height;
     background: $coin;
-    margin-right: 24px;
+    position: absolute;
     vertical-align: middle;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
   }
 }
 
@@ -203,5 +205,12 @@ body>iframe[style*="2147483647"]:not([id="webpack-dev-server-client-overlay"]) {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@supports (paint-order: stroke) {
+  /* 如果浏览器支持paint-order，则定义一个类 */
+  .paint-order-supported {
+      content: "paint-order supported";
   }
 }
