--- a/src/Pages/Home/components/miningComp/index.module.scss
+++ b/src/Pages/Home/components/miningComp/index.module.scss
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: center;
   // margin: 93px auto 0;
+  position: relative;
+  z-index: 2;
 }
 .progress_start {
   animation: colorCycle 2s infinite;
