--- a/src/Components/StorkWrapper/index.module.scss
+++ b/src/Components/StorkWrapper/index.module.scss
@@ -10,6 +10,9 @@
         stroke-linejoin: round;
         text-align: center;
         margin: 0 auto;
+        &.text_2 {
+            fill:#ffe100 ;
+        }
         &.text_36{
             font-size: 36px;
             stroke-width: 6px;
