--- a/src/Components/StorkWrapper/index.module.scss
+++ b/src/Components/StorkWrapper/index.module.scss
@@ -1,4 +1,7 @@
 .text_wrapper{
+    &.text_wrapper_52{
+        width: 49px;
+    }
     .num{
         fill: #fffb00;
         font-family: 'Kemco Pixel';
