--- a/src/Components/TabList/index.module.scss
+++ b/src/Components/TabList/index.module.scss
@@ -20,6 +20,7 @@
       height: 134px;
       padding: 0 30px;
       margin: 0 auto 16px;
+      position: relative;
       .tab-l {
         flex: 0 0 94px;
         height: 94px;
@@ -115,7 +116,7 @@
           flex:0 0 78px;
           height: 42px;
         }
-        &.lock{
+        &.lock,&.lock_limit{
           background: $lock;
           flex:0 0 48px;
           height: 54px;;
@@ -125,6 +126,19 @@
           flex: 0 0 38px;
           height: 30px;
         }
+      }
+      .limit_label{
+        position: absolute;
+        right: 0;
+        top: 0;
+        color: #142443;
+        text-align: center;
+        font-family: "SF Pixelate";
+        font-size: 20px;
+        border-radius: 0px 10px;
+        background: #FFFB00;
+        width: 187px;
+        height: 35px;
       }
     }
 
