--- a/src/Components/TabList/index.module.scss
+++ b/src/Components/TabList/index.module.scss
@@ -139,6 +139,9 @@
         background: #FFFB00;
         width: 187px;
         height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
 
