--- a/src/Components/Toast/toast.module.scss
+++ b/src/Components/Toast/toast.module.scss
@@ -31,7 +31,7 @@
     flex: 0 0 62px;
     height: 34px;
   }
-  .lock {
+  .lock,.lock_limit {
     background: $ban;
     flex: 0 0 62px;
     height: 62px;
